2005-05-19  Not Zed  <NotZed@Ximian.com>

	* evolution-plugin-manual.xml: added some stuff about the pseudo
	mime types used for finer control of the formatter.

2005-05-13  Not Zed  <NotZed@Ximian.com>

	* evolution-plugin-manual.xml: added some info on the menu tag for
	popup menus.

2004-11-18  Not Zed  <NotZed@Ximian.com>

	* evolution-plugin-manual.xml: define load-on-startup parameter.

2004-11-03  Not Zed  <NotZed@Ximian.com>

	* evolution-plugin-manual.xml: added author section to eplugin
	definition.

2004-10-28  Not Zed  <NotZed@Ximian.com>

	* evolution-plugin-manual.xml: setup for more auto-built stuff.

	* build-eplugin-manual.pl: auto-build more stuff.

2004-10-12  Not Zed  <NotZed@Ximian.com>

	* evolution-plugin-manual.xml: doc updates for new 'check' callback.

2004-10-07  Not Zed  <NotZed@Ximian.com>

	* evolution-plugin-manual.xml: some updates.

2004-09-09  Not Zed  <NotZed@Ximian.com>

	* evolution-plugin-manual.xml: updates.  some not very readable, sigh.

	* images: Added e-popup-merge-[12].pic.

2004-09-04  Not Zed  <NotZed@Ximian.com>

	* images/Makefile: add a temporary makefile to build images from
	source pic files.

	* evolution-plugin-manual.xml: updates/rearrangements.

2004-09-01  Not Zed  <NotZed@Ximian.com>

	* images/*: added some image files.

	* evolution-plugin-manual.xml: fix for some api changes.  Updates.

2004-08-25  Not Zed  <NotZed@Ximian.com>

	* evolution-plugin-manual.xml: Added the working plugin manual
	in-case i crash my bike going to work one day.

2003-11-20  JP Rosevear <jpr@ximian.com>

	* Remove dead doc files.

2003-09-11  Dan Winship  <danw@ximian.com>

	* calendar/cal-client/Makefile.am (GTKDOC_LIBS): Use non-static
	libraries.

	* calendar/cal-util/Makefile.am (GTKDOC_LIBS): Likewise