@@ -1,3 +1,9 @@
+2005-07-12  Not Zed  <NotZed@Ximian.com>
+
+	* build-eplugin-manual.pl:
+
+	* evolution-plugin-manual.xml: Added some e-import stuff.
+
 2005-05-19  Not Zed  <NotZed@Ximian.com>
 
 	* evolution-plugin-manual.xml: added some stuff about the pseudo
